<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/settingsMenuLinearLayout"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/rounder_corner"
    android:minWidth="240dp"
    android:orientation="vertical">

    <TextView
        android:id="@+id/endScoreTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textAlignment="center"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="30dp"
        android:paddingHorizontal="14dp"
        android:text="@string/settings_header"
        android:textColor="@color/black"
        android:textSize="24sp" />

    <CheckBox
        android:id="@+id/settingCheckboxColor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/settings_color_mode"
        android:gravity="center"
        android:textColor="@color/black" />

    <CheckBox
        android:id="@+id/settingCheckboxOled"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/settings_amoled"
        android:textColor="@color/black" />

    <CheckBox
        android:id="@+id/settingCheckboxScore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:text="@string/settings_scoreboard"/>

    <CheckBox
        android:id="@+id/settingOfflineMode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:text="@string/settings_offline_mode"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="5dp"
        android:paddingTop="5dp"
        android:paddingEnd="0dp"
        android:paddingBottom="0dp"
        android:textColor="@color/black"
        android:text="@string/settings_text_size" />

    <com.google.android.material.slider.Slider
        android:id="@+id/settingsTextSizeSlider"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:stepSize="1"
        android:value="14"
        android:valueFrom="4"
        android:valueTo="24" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="5dp"
        android:paddingTop="5dp"
        android:paddingEnd="0dp"
        android:paddingBottom="0dp"
        android:textColor="@color/black"
        android:text="@string/settings_board_size" />

    <com.google.android.material.slider.Slider
        android:id="@+id/settingsBoardSizeSlider"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:stepSize="1"
        android:value="10"
        android:valueFrom="1"
        android:valueTo="10" />
    <Button
        android:id="@+id/supportButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="10dp"
        android:text="@string/about_button"/>
    <Button
        android:id="@+id/settingsReturnButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/general_return" />

</LinearLayout>