<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/endScoreLinearLayout"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:minWidth="200dp"
    android:background="@drawable/rounder_corner">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_gravity="center"
        android:layout_marginBottom="10dp"
        android:textColor="@color/black"
        android:textAlignment="center"
        android:text="@string/player_banned_header"
        android:textStyle="bold"
        android:textSize="22sp" />

    <TextView
        android:id="@+id/playerBannedTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingHorizontal="5dp"
        android:textColor="@color/black"
        android:layout_gravity="center"
        android:text="@string/player_banned_text" />

    <Button
        android:id="@+id/playerBannedExitButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:layout_gravity="center"
        android:text="@string/general_return"/>

</LinearLayout>