<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="12dp"
    android:layout_marginVertical="6dp"
    android:background="@drawable/rounder_corner">

    <TextView
        android:id="@+id/gameUnavailablePopupHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        android:text="@string/network_error_popup_header"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/gameUnavailablePopupContent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/network_error_popup_content"
        android:layout_marginTop="10dp"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:textColor="@color/black"
        android:textSize="12sp"
        android:textAlignment="center"
        app:layout_constraintTop_toBottomOf="@+id/gameUnavailablePopupHeader"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/gameUnavailablePopupErrorHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:textSize="14sp"
        android:textAlignment="center"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@+id/gameUnavailablePopupContent"
        android:text="@string/network_error_popup_error_message"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/gameUnavailablePopupErrorMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:textAlignment="center"
        android:textSize="12sp"
        android:textColor="@color/error_red"
        app:layout_constraintTop_toBottomOf="@+id/gameUnavailablePopupErrorHeader"
        android:text="@string/network_error_popup_error_message"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/gameUnavailablePopupOfflineButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/gameUnavailablePopupErrorMessage"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/network_error_popup_offline_button"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/gameUnavailablePopupReturnButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/gameUnavailablePopupOfflineButton"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/general_exit"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>