<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_gradient"
    android:id="@+id/aboutActivityLayout"
    tools:context=".activities.AboutActivity">

    <TextView
        android:id="@+id/aboutHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/about_activity_header"
        android:layout_marginTop="16dp"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="@color/black"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/versionCategoryHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/aboutHeader"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="10dp"
        android:textSize="16sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:text="@string/version_category_header" />

    <LinearLayout
        android:id="@+id/versionLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/versionCategoryHeader"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="6dp"
        android:layout_marginHorizontal="24dp"
        android:weightSum="2"
        >
        <TextView
            android:id="@+id/versionHeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/versionCategoryHeader"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:textSize="12sp"
            android:layout_gravity="center"
            android:textColor="@color/black"
            android:layout_weight="1"
            android:text="@string/about_property_version" />

        <TextView
            android:id="@+id/versionText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/versionCategoryHeader"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:textSize="12sp"
            android:layout_gravity="center"
            android:textColor="@color/black"
            android:layout_weight="1"
            android:text="2.0.0" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/lastFetchedLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/versionLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="6dp"
        android:layout_marginHorizontal="24dp"
        android:weightSum="2"
        >
        <TextView
            android:id="@+id/lastFetchHeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/versionCategoryHeader"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:textSize="12sp"
            android:layout_gravity="center"
            android:textColor="@color/black"
            android:layout_weight="1"
            android:text="@string/about_property_last_fetched" />

        <TextView
            android:id="@+id/lastFetchValue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/versionCategoryHeader"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:textSize="12sp"
            android:layout_gravity="center"
            android:textColor="@color/black"
            android:layout_weight="1"
            android:text="dd.mm.yyyy HH:mm" />
    </LinearLayout>

    <TextView
        android:id="@+id/contactInfoCategoryHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/lastFetchedLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="30dp"
        android:textSize="16sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:text="@string/support_category_header" />

    <LinearLayout
        android:id="@+id/contactInfoLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@id/contactInfoCategoryHeader"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="6dp"
        android:layout_marginHorizontal="36dp" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >
            <View
                android:id="@+id/contactEmailIcon"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginHorizontal="20dp"
                android:background="@drawable/baseline_email_24" />
            <TextView
                android:id="@+id/contactEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="12sp"
                android:textAlignment="viewStart"
                android:layout_marginBottom="5dp"
                android:autoLink="email"
                android:text="" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:orientation="horizontal" >
            <View
                android:id="@+id/contactGitHubIcon"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginHorizontal="20dp"
                android:background="@drawable/github_icon" />
            <TextView
                android:id="@+id/contactGitHub"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="12sp"
                android:textAlignment="viewStart"
                android:layout_marginBottom="5dp"
                android:text="" />
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/licenseInfoHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/contactInfoLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="30dp"
        android:textSize="16sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:text="@string/software_category_header" />

    <LinearLayout
        android:id="@+id/sourceCodeLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/licenseInfoHeader"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="6dp"
        android:layout_marginHorizontal="24dp"
        android:weightSum="2">
        <TextView
            android:id="@+id/sourceCodeHeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/licenseInfoHeader"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:textSize="12sp"
            android:layout_gravity="center"
            android:textColor="@color/black"
            android:layout_weight="1"
            android:text="@string/about_property_src_code" />

        <TextView
            android:id="@+id/sourceCodeValue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/licenseInfoHeader"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:textSize="12sp"
            android:layout_gravity="center"
            android:textColor="@color/black"
            android:layout_weight="1"
            android:text="" />
    </LinearLayout>

    <Button
        android:id="@+id/thirdPartyInfoButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/sourceCodeLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/third_party_header"/>

    <Button
        android:id="@+id/exportLogButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        app:layout_constraintTop_toBottomOf="@+id/thirdPartyInfoButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/export_log_button" />

    <LinearLayout
        android:id="@+id/debugLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/exportLogButton"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="6dp"
            android:textColor="@color/white"
            android:shadowRadius="2"
            android:shadowDy="1"
            android:shadowDx="1"
            android:shadowColor="@color/black"
            android:textStyle="bold"
            android:textSize="16sp"
            android:textAlignment="center"
            android:text="@string/debug_features_header" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/debug_clear_cache_description"
            android:textColor="@color/white"
            android:shadowColor="@color/black"
            android:textAlignment="center"
            android:layout_marginHorizontal="10dp"
            android:layout_marginBottom="6dp"
            android:textSize="11sp"
            android:shadowRadius="2"/>
        <Button
            android:id="@+id/clearCacheButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/debug_clear_cache_button" />
    </LinearLayout>

    <Button
        android:id="@+id/returnButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:minWidth="120dp"
        android:layout_marginBottom="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/general_return"/>

</androidx.constraintlayout.widget.ConstraintLayout>